--- a/details.htm
+++ b/details.htm
@@ -7,7 +7,7 @@
     <title>mydetails</title>
 </head>
 <body>
-    <img src="" id="imgout" width="200px" height="200px"/><br>
+    <img src="" id="imgout" width="200px" height="200px" alt="this is img"/><br>
     Name: <p id="name"></p>
     Age: <p id="age"></p>
     Gender: <p id="gender"></p>
